Improve syscollector and experimental API Integration test healthchecks (#11845)
* Run modulesd in debug mode and update healthecks for the AIT env

* Remove xfail mark from syscollector and experimental AIT

* Update experimental AIT healthchecks

* Update syscollector and experimental AIT healthchecks

* Add xfail marks to syscollector tests

* Add xfail mark to syscollector tests in experimental AIT

* Use old healthcheck until #11829 is solved

* Add endline to experimental AIT healthcheck

* Add reminder to change HC in experimental and syscollector AIT

--- a/api/test/integration/test_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_experimental_endpoints.tavern.yaml
@@ -212,7 +212,8 @@ stages:
 test_name: GET /experimental/syscollector/netaddr
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -280,7 +281,8 @@ stages:
 test_name: GET /experimental/syscollector/netiface
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -359,7 +361,8 @@ stages:
 test_name: GET /experimental/syscollector/netproto
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -426,7 +429,8 @@ stages:
 test_name: GET /experimental/syscollector/os
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -501,6 +505,10 @@ stages:
 ---
 test_name: GET /experimental/syscollector/packages
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name: Request
@@ -543,7 +551,8 @@ stages:
 test_name: GET /experimental/syscollector/ports
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -632,6 +641,10 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
