--- a/api/test/integration/test_rbac_black_syscollector_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_black_syscollector_endpoints.tavern.yaml
@@ -2,8 +2,9 @@
 test_name: GET OS SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
   - base_tests
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -55,7 +56,8 @@ stages:
 test_name: GET HARDWARE SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -101,7 +103,8 @@ stages:
 test_name: GET NETADDR SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -141,7 +144,8 @@ stages:
 test_name: GET NETIFACE SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -191,6 +195,10 @@ stages:
 ---
 test_name: GET NETPROTO SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -226,6 +234,10 @@ stages:
 
 ---
 test_name: GET PACKAGES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -273,6 +285,10 @@ stages:
 ---
 test_name: GET PORTS SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -318,6 +334,10 @@ stages:
 
 ---
 test_name: GET PROCESSES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
