--- a/api/test/integration/test_syscollector_endpoints.tavern.yaml
+++ b/api/test/integration/test_syscollector_endpoints.tavern.yaml
@@ -3,7 +3,8 @@ test_name: GET /syscollector/{agent_id}/os
 
 marks:
   - base_tests
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -60,7 +61,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/os?{select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -98,7 +100,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/hardware
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -148,7 +151,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/hardware?{select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -179,6 +183,10 @@ stages:
 
 ---
 test_name: GET /syscollector/{agent_id}/packages
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -536,6 +544,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/packages?{select}
 
 marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -569,6 +579,10 @@ stages:
 
 ---
 test_name: GET /syscollector/{agent_id}/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -999,6 +1013,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/processes?{sort,select}
 
 marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -1064,6 +1080,10 @@ stages:
 
 ---
 test_name: GET /syscollector/{agent_id}/ports
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -1271,6 +1291,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/port?{sort,select}
 
 marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -1324,7 +1346,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netaddr
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -1667,7 +1690,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netaddr?{sort,select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -1715,6 +1739,10 @@ stages:
 
 ---
 test_name: GET /syscollector/{agent_id}/netproto
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -1997,6 +2025,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netproto?{sort,select}
 
 marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -2045,7 +2075,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netiface
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -2656,7 +2687,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netiface?{sort,select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -2714,7 +2746,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/os
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -2765,7 +2798,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/os?{select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -2805,7 +2839,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/hardware
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -2851,7 +2886,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/hardware?{select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -2884,7 +2920,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netaddr
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -3185,7 +3222,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netaddr?{sort,select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -3219,6 +3257,10 @@ stages:
 
 ---
 test_name: GET /syscollector/{agent_id}/netproto
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -3516,6 +3558,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netproto?{sort,select}
 
 marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
@@ -3563,7 +3607,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netiface
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -4159,7 +4204,8 @@ stages:
 test_name: GET /syscollector/{agent_id}/netiface?{sort,select}
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
   - parametrize:
       key: field
       vals:
