--- a/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
@@ -192,7 +192,8 @@ stages:
 test_name: GET /experimental/syscollector/hardware
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -248,7 +249,8 @@ stages:
 test_name: GET /experimental/syscollector/netaddr
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -296,7 +298,8 @@ stages:
 test_name: GET /experimental/syscollector/netiface
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -344,7 +347,8 @@ stages:
 test_name: GET /experimental/syscollector/netproto
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -392,7 +396,8 @@ stages:
 test_name: GET /experimental/syscollector/os
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -439,6 +444,10 @@ stages:
 ---
 test_name: GET /experimental/syscollector/packages
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name:  Request all agents (Partially allowed, user agnostic)
@@ -474,7 +483,8 @@ stages:
 test_name: GET /experimental/syscollector/ports
 
 marks:
-  - xfail # Investigate and fix error in experimental API integration tests - https://github.com/wazuh/wazuh/issues/10654
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -528,6 +538,10 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
