--- a/api/test/integration/test_rbac_white_syscollector_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_syscollector_endpoints.tavern.yaml
@@ -2,8 +2,9 @@
 test_name: GET OS SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
   - rbac_tests
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -58,7 +59,8 @@ stages:
 test_name: GET HARDWARE SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -104,7 +106,8 @@ stages:
 test_name: GET NETADDR SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -144,7 +147,8 @@ stages:
 test_name: GET NETIFACE SYSCOLLECTOR RBAC
 
 marks:
-  - xfail # Review and fix syscollector endpoints API integration tests - https://github.com/wazuh/wazuh/issues/10923
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -194,6 +198,10 @@ stages:
 ---
 test_name: GET NETPROTO SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -229,6 +237,10 @@ stages:
 
 ---
 test_name: GET PACKAGES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -276,6 +288,10 @@ stages:
 ---
 test_name: GET PORTS SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -321,6 +337,10 @@ stages:
 
 ---
 test_name: GET PROCESSES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
