--- a/src/unit_tests/os_crypto/sha256/CMakeLists.txt
+++ b/src/unit_tests/os_crypto/sha256/CMakeLists.txt
@@ -8,7 +8,9 @@
 cmake_minimum_required(VERSION 3.10)
 
 list(APPEND sha256_tests_names "test_sha256_op")
-list(APPEND sha256_tests_flags " ")
+list(APPEND sha256_tests_flags "-Wl,--wrap,fopen -Wl,--wrap,fclose -Wl,--wrap,fflush -Wl,--wrap,fread \
+                                -Wl,--wrap,fseek -Wl,--wrap,fwrite -Wl,--wrap,remove -Wl,--wrap,fprintf \
+                                -Wl,--wrap,fgets -Wl,--wrap,fgetpos -Wl,--wrap,fgetc")
 
 # Compiling tests
 list(LENGTH sha256_tests_names count)
