--- a/src/syscheckd/src/db/tests/CMakeLists.txt
+++ b/src/syscheckd/src/db/tests/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(db/dbItem/RegistryKey)
 add_subdirectory(db/dbItem/RegistryValue)
 add_subdirectory(db/FIMDB/fimDBTests)
 add_subdirectory(db/ComponentTest/fileInterface)
+add_subdirectory(db/ComponentTest/registryInterface)
 add_subdirectory(db/ComponentTest/dbInterface)
