Changes in some info/debug/warning message and some alerts

--- a/src/syscheckd/src/db/tests/CMakeLists.txt
+++ b/src/syscheckd/src/db/tests/CMakeLists.txt
@@ -16,5 +16,7 @@ add_subdirectory(db/dbItem/RegistryKey)
 add_subdirectory(db/dbItem/RegistryValue)
 add_subdirectory(db/FIMDB/fimDBTests)
 add_subdirectory(db/ComponentTest/fileInterface)
-add_subdirectory(db/ComponentTest/registryInterface)
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    add_subdirectory(db/ComponentTest/registryInterface)
+endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 add_subdirectory(db/ComponentTest/dbInterface)
