--- a/api/test/integration/test_agent_POST_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_POST_endpoints.tavern.yaml
@@ -20,7 +20,7 @@ stages:
     response:
       status_code: 200
       json: &agent_create_response
-        error: !anyint
+        error: 0
         data:
           id: !anystr
           key: !anystr
@@ -73,7 +73,7 @@ stages:
 
     # GET /agents
   - name: Check all registered IPV6 agents
-    request: &agent_list_response
+    request: &agent_list_request
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/agents"
       method: GET
@@ -84,7 +84,7 @@ stages:
     response:
       status_code: 200
       json:
-        error: !anyint
+        error: 0
         data:
           affected_items:
             - id: "{agent1_id_ipv6:s}"
@@ -280,13 +280,13 @@ stages:
   - name: Check that this agent has the IP 'any'
     request:
       verify: False
-      <<: *agent_list_response
+      <<: *agent_list_request
       params:
         agents_list: "{agent_id_no_ip:s}"
     response:
       status_code: 200
       json:
-        error: !anyint
+        error: 0
         data:
           affected_items:
             - id: "{agent_id_no_ip:s}"
@@ -599,7 +599,7 @@ stages:
     response:
       status_code: 200
       json:
-        error: !anyint
+        error: 0
         data:
           id: !anystr
           key: !anystr
