Some changes in format of fim_db_check_state conditionals Removed unit test related to fim_db_is_full Added some flags to syscheckd compilation

--- a/src/Makefile
+++ b/src/Makefile
@@ -271,8 +271,8 @@ endif # Linux
 else
 		SHARED=dll
 		DEFINES_EVENTCHANNEL=-D_WIN32_WINNT=0x600
-		OSSEC_CFLAGS+=-pthread -static-libgcc -static-libstdc++
-		OSSEC_LDFLAGS+=-pthread -static-libgcc -static-libstdc++
+		OSSEC_CFLAGS+=-pthread -static-libstdc++
+		OSSEC_LDFLAGS+=-pthread -static-libstdc++
 		AR_LDFLAGS+=-pthread
 		PRECOMPILED_OS:=windows
 endif # winagent
