--- a/src/shared_modules/dbsync/CMakeLists.txt
+++ b/src/shared_modules/dbsync/CMakeLists.txt
@@ -72,9 +72,9 @@ elseif(UNIX AND NOT APPLE)
     set_target_properties(dbsync PROPERTIES
       LINK_FLAGS "-static-libgcc -static-libstdc++")
   endif(CMAKE_SYSTEM STREQUAL "SunOS-5.10")
-  if(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
+  if(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX" AND NOT CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
     string(APPEND CMAKE_SHARED_LINKER_FLAGS " -Wl,-rpath=$ORIGIN")
-  endif(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
+  endif(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX" AND NOT CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
 endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 
 target_link_libraries(dbsync wazuhext)
@@ -84,6 +84,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(REPLACE ";" ":" CXX_IMPLICIT_LINK_DIRECTORIES_STR "${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES}")
     string(REPLACE ";" ":" PLATFORM_REQUIRED_RUNTIME_PATH_STR "${CMAKE_PLATFORM_REQUIRED_RUNTIME_PATH}")
     target_link_libraries(dbsync -Wl,-blibpath:${INSTALL_PREFIX}/lib:${CXX_IMPLICIT_LINK_DIRECTORIES_STR}:${PLATFORM_REQUIRED_RUNTIME_PATH_STR})
+  elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
+    string(APPEND CMAKE_SHARED_LINKER_FLAGS " -Wl,+b,${INSTALL_PREFIX}/lib")
   endif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
 endif(CMAKE_BUILD_TYPE STREQUAL "Release")
 
