--- a/src/syscheckd/CMakeLists.txt
+++ b/src/syscheckd/CMakeLists.txt
@@ -60,6 +60,8 @@ set(CMAKE_CXX_FLAGS
 
 if(APPLE)
   set(CMAKE_MACOSX_RPATH 1)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
+  add_definitions(-DHPUX)
 endif(APPLE)
 
 add_subdirectory("src/db")
@@ -87,14 +89,15 @@ if (UNIX)
             if (CMAKE_SYSTEM_VERSION STRGREATER "5.10")
                 string(APPEND CMAKE_EXE_LINKER_FLAGS " -z relax=secadj")
             endif(CMAKE_SYSTEM_VERSION STRGREATER "5.10")
-        endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
-        if(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
-            string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath,$ORIGIN/../lib")
-        else()
+        elseif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
             string(REPLACE ";" ":" CXX_IMPLICIT_LINK_DIRECTORIES_STR "${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES}")
             string(REPLACE ";" ":" PLATFORM_REQUIRED_RUNTIME_PATH_STR "${CMAKE_PLATFORM_REQUIRED_RUNTIME_PATH}")
             target_link_libraries(wazuh-syscheckd -Wl,-blibpath:${INSTALL_PREFIX}/lib:${CXX_IMPLICIT_LINK_DIRECTORIES_STR}:${PLATFORM_REQUIRED_RUNTIME_PATH_STR})
-        endif(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
+        elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
+            string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,+b,${INSTALL_PREFIX}/lib")
+        else()
+            string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath,$ORIGIN/../lib")
+        endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
     else()
         string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath,@executable_path/../lib")
     endif(NOT APPLE)
