Add syscollector information deltas support (#10843)
* Uncommented deltas sending in wm_syscollector.

* Unit test for wdb_syscollector.c with 100% coverage (#10352)

* Adding dynamic fields matching mechanism for syscollector decoder (#10370)

* Adding matcher for dynamic data events.

* Adding more UTs for delta fields matching code

Co-authored-by: Dwordcito <octa.tala@gmail.com>

* Change the way how dbsync getDeletedRows works to return only PKs values

* Added syscollector sequence diagram from the manager side view (#10419)

* Modification filebeat template to support syscollector delta (#10543)

* Incorrect pk values delete callback (#10616)

* Fix pk values when delete callback is called.

* Add unit test that reproduce the issue.

* Populate eventinfo fields for syscollector events (#10540)

* Add pipe separator verification for syscollector deltas. (#10626)

* Improve wazuh-db support for deltas with certain datatypes (#10637)

* Add wazuh-db support for deltas datatypes

- Add support for fields with double type
- Improve support for integer type

* Fixes based on code review:

- Add some const correctness
- Change some evaluations to Yoda Style

* Change in the treatment of null fields (#10638)

* Change in the treatment of null fields

* It changes the 'error' in favour to 'err' on the response message, and catch rows count affected for a change/delete

* Handling of separator character on fields

* Fixing test_wdb_syscollector.c UT to os_display_version

* Fix populated values of syscollector delta when it contains null elements (#10724)

* Fix syscollector delta's populated values when contains null elements

* Change loglevel to DEBUG when wazuh-db delta query fails

* Fix wazuh-db INSERTED query creation when fields are missing

- Change/reduce scope of some syscollector decoder functions

* Fix wdb NULL retrieving and updating from agent inventory during delta handing (#10746)

* Fix wd

--- a/src/unit_tests/wazuh_db/CMakeLists.txt
+++ b/src/unit_tests/wazuh_db/CMakeLists.txt
@@ -29,6 +29,9 @@ list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_scan_info_get -Wl,--wrap,wdb_fim_upd
                         -Wl,--wrap,wdb_agents_get_packages -Wl,--wrap,wdb_agents_get_hotfixes -Wl,--wrap,close -Wl,--wrap,getpid \
                         -Wl,--wrap,wdb_package_save -Wl,--wrap,wdb_hotfix_save -Wl,--wrap,wdb_package_update -Wl,--wrap,wdb_package_delete \
                         -Wl,--wrap,wdb_hotfix_delete -Wl,--wrap,time -Wl,--wrap,wdbi_update_attempt  -Wl,--wrap,wdbi_update_completion \
+                        -Wl,--wrap,sqlite3_reset -Wl,--wrap,sqlite3_prepare_v2 \
+                        -Wl,--wrap,sqlite3_clear_bindings -Wl,--wrap,wdb_get_cache_stmt -Wl,--wrap,sqlite3_column_text \
+                        -Wl,--wrap,sqlite3_column_int -Wl,--wrap,sqlite3_column_double -Wl,--wrap,sqlite3_bind_null -Wl,--wrap,sqlite3_bind_int64\
                         ${DEBUG_OP_WRAPPERS}")
 
 list(APPEND wdb_tests_names "test_wdb_global_parser")
@@ -117,11 +120,23 @@ list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_stmt_cache -Wl,--wrap,sqlite3_bind_t
                              -Wl,--wrap,sqlite3_last_insert_rowid -Wl,--wrap,wdb_step -Wl,--wrap,sqlite3_changes -Wl,--wrap,sqlite3_step \
                              ${DEBUG_OP_WRAPPERS}")
 
+list(APPEND wdb_tests_names "test_wdb_syscollector")
+list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_begin2 -Wl,--wrap,_mdebug1 -Wl,--wrap,wdb_stmt_cache -Wl,--wrap,sqlite3_bind_text \
+                             -Wl,--wrap,sqlite3_bind_int -Wl,--wrap,sqlite3_bind_int64 -Wl,--wrap,sqlite3_step -Wl,--wrap,sqlite3_errmsg \
+                             -Wl,--wrap,sqlite3_column_text -Wl,--wrap,sqlite3_column_int -Wl,--wrap,sqlite3_bind_double \
+                             -Wl,--wrap,sqlite3_bind_null -Wl,--wrap,cJSON_GetStringValue -Wl,--wrap,cJSON_GetObjectItem -Wl,--wrap,cJSON_Parse \
+                             -Wl,--wrap,cJSON_Delete -Wl,--wrap,cJSON_IsNumber -Wl,--wrap,cJSON_IsString -Wl,--wrap,wdb_agents_get_sys_osinfo \
+                             ${DEBUG_OP_WRAPPERS}")
+
 list(APPEND wdb_tests_names "test_wdb_task")
 list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_begin2 -Wl,--wrap,wdb_stmt_cache -Wl,--wrap,sqlite3_bind_text -Wl,--wrap,sqlite3_bind_int \
                              -Wl,--wrap,wdb_step -Wl,--wrap,sqlite3_column_int -Wl,--wrap,time -Wl,--wrap,sqlite3_errmsg\
                              -Wl,--wrap,sqlite3_column_text -Wl,--wrap,sqlite3_step ${DEBUG_OP_WRAPPERS}")
 
+list(APPEND wdb_tests_names "test_wdb_delta_event")
+list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_get_cache_stmt -Wl,--wrap,wdb_step -Wl,--wrap,sqlite3_bind_int -Wl,--wrap,sqlite3_bind_int64 \
+                            -Wl,--wrap,sqlite3_bind_text -Wl,--wrap,sqlite3_step -Wl,--wrap,sqlite3_bind_double -Wl,--wrap,sqlite3_changes \
+                            -Wl,--wrap,sqlite3_bind_null ${DEBUG_OP_WRAPPERS}")
 
 # Compilig tests
 list(LENGTH wdb_tests_names count)
